# cicada

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SKILL.md  install.sh
api/: .env.example  config.py  main.py  pyproject.toml
api/models/: schemas.py
api/routers/: ask.py  banks.py  capture.py  claims.py  clarifications.py  contributors.py  conversations.py  entities.py  graph.py  inbox.py  local_refs.py  maintenance.py  nudges.py  origins.py  search.py  sleep.py  sources.py  status.py
api/scripts/: backfill_bookmark_origins.py  seed_claims.py
api/services/: agentic_write.py  ask_service.py  bank_registry.py  bookmark_sync.py  calendar_registry.py  claim_pipeline.py  claim_reconciler.py  claim_seeder.py  claims.py  clarification_manager.py  conflict_resolver.py  dedup_sweep.py  entity_body.py  entity_extractor.py  entity_merge.py  entity_resolver.py  entity_sources.py  feed_registry.py  git_service.py  graph_builder.py  hub_builder.py  id_utils.py  inbox_generator.py  inbox_migration.py  inbox_service.py  leann_indexer.py  link_enrichment.py  local_refs.py  markdown_parser.py  media_ingestor.py  notes_sync.py  nudge_generator.py  origin_stats.py  predicates.py  promote_targets.py  providers.py  repo_context.py  skill_extractor.py  sleep_cycle.py  sleep_scheduler.py  (+5 more)
api/tests/: test_agentic_subject_resolution.py  test_agentic_write.py  test_ask_claim_retrieval.py  test_ask_service.py  test_backfill_bookmark_origins.py  test_banks.py  test_bookmark_sync.py  test_bookmarks_safari.py  test_calendar_registry.py  test_claim_edge_regen.py  test_claim_emission.py  test_claim_endpoints.py  test_claim_inbox.py  test_claim_pipeline.py  (+44 more)
(+142 files in other folders)
