[project]
name = "cicada-api"
version = "0.1.0"
description = "Cicada companion app backend — filesystem-backed API for the personal knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "litellm>=1.83.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "pyyaml>=6.0.3",
    "thefuzz[speedup]>=0.22.1",
    "uvicorn[standard]>=0.44.0",
]
