[project]
name = "cicada-api"
version = "0.1.0"
description = "Cicada companion app backend — filesystem-backed API for the personal knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "leann>=0.1.0",
    "litellm>=1.83.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.0.0",
    "sqlite-vec>=0.1.9",
    "thefuzz[speedup]>=0.22.1",
    "tqdm>=4.66.0",
    "uvicorn[standard]>=0.44.0",
]

[project.optional-dependencies]
# On-device embedding fallback (CICADA_EMBEDDING_MODE=local). Pulls torch:
# ~250MB install; the all-MiniLM-L6-v2 model (~90MB) is downloaded on first
# index build. Not a hard dependency — only OpenAI users who want offline
# embeddings need it. Install with: uv sync --extra local --directory api
local = ["sentence-transformers>=2.2"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
